Compiler/tests/bad/Ifs/05_ifs.rs
// else if without else

fn main(){
    let x:i32 = 42;
    if(x < 50){
        println!(x);
    } else if {
        println!(23);
    }
}